fix alignment and styling of main nav

--- a/src/styles/mail.css
+++ b/src/styles/mail.css
@@ -92,6 +92,25 @@
   border-bottom: 1px solid #dbdbdb;
 }
 
+.post-office-form p {
+  font-size: 12px;
+  font-weight: 500;
+  margin-left: 10px;
+  border-radius: 100px;
+  text-decoration: none;
+  letter-spacing: .25px;
+  color: rgb(45, 45, 45);
+  padding: 6px 18px 6px 12px;
+  border: 1px solid #dbdbdb;
+}
+
+.post-office-form header button {
+  font-size: 12px;
+  font-weight: 500;
+  margin-left: 12px;
+  padding: 6px 28px 6px 28px;
+}
+
 .post-office-form header h3 {
   margin: 0;
   margin-right: auto;
